Fix spacing of status

--- a/app/assets/stylesheets/site/_sidebar.css.scss
+++ b/app/assets/stylesheets/site/_sidebar.css.scss
@@ -42,7 +42,7 @@
   .status {
     margin-top: 30px; // move the progress/steps down from the house block
       .cur-step {
-        margin-bottom: 7px;
+        margin-bottom: 10px;
     }
     &.status-project {
       border-top: none;
