--- a/app/assets/stylesheets/site/responsive.css.scss
+++ b/app/assets/stylesheets/site/responsive.css.scss
@@ -42,6 +42,7 @@
         display:inline-block; // show the step we're on, settle them on the same line
         font-weight: 700;
         font-size:12px;
+        margin-bottom: 7px !important;
         opacity: .5;
       }
     }
